--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,3 +24,11 @@
 [[constraint]]
   name = "github.com/spf13/cobra"
   version = "0.0.1"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/dghubble/go-twitter"
+
+[[constraint]]
+  name = "github.com/dghubble/oauth1"
+  version = "0.4.0"
