--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   name = "github.com/dghubble/oauth1"
   version = "0.4.0"
+
+[[constraint]]
+  name = "github.com/fatih/color"
+  version = "1.5.0"
